--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-.conda
-measurements/01*
-measurements/02*
-measurements/03*
-measurements/leaves
+measurements/250522/*
+!measurements/250522/leaves/*
+!measurements/250522/masks/*
+
+.conda/
+Miniconda*  
